# marc.cx

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  brunch-config.js  mix.exs  package.json  rollup.config.js  run_prod.sh  svelte.config.js  tsconfig.json
.github/workflows/: docker.yml
articles/: auto-renewing-ssl-certs-on-nginx-with-lets-encrypt.md  hello-world.md  test.txt
client/: App.svelte  Footer.svelte  Header.svelte  global.scss  main.ts  ssr.js  ssrEntry.js
client/components/: Alert.wc.svelte  Article.svelte  ArticleList.svelte  CodeBlock.wc.svelte  Footer.svelte  Header.svelte  HorizontalDashHeading.svelte  NavLink.svelte  ProjectList.svelte  SpecialHeading.svelte  VerticalLineHeading.svelte  index.ts  types.ts
client/pages/: Article.svelte  Articles.svelte  Home.svelte  NotFound.svelte  Projects.svelte  Tag.svelte  index.ts
config/: config.exs  dev.exs  prod.exs  test.exs
content/articles/: auto-renewing-ssl-certs-on-nginx-with-lets-encrypt.md  diy-simrig-build-part-1.md  diy-simrig-build-part-2.md  hello-world.md  rust-and-svelte.md  spicy-mala-noodles.md  svelte-ssr-with-rust.md
content/projects/: cl.md  clockify-transfer.md  clparse.md  marc.cx.md
lib/: marc_cx.ex
lib/marc_cx/: endpoint.ex  html_renderer.ex  markdown.ex  repo.ex
priv/articles/: auto-renewing-ssl-certs-on-nginx-with-lets-encrypt.md  hello-world.md
priv/static/: manifest.json
src/: api.rs  article.rs  main.rs  markdown.rs  page.rs  project.rs  ssr.rs  ymd_hm_format.rs
static/: global.css  index.html
test/: test_helper.exs
web/: router.ex  web.ex
(+19 files in other folders)
