[package]
name = "marccx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
derive_builder = "0.11.2"
grass = "0.11.2"
html-escape = "0.2.11"
lol_html = "0.3.1"
pulldown-cmark = "0.9.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.145"
serde_json = "1.0.85"
ssr_rs = "0.2.3"
yaml-front-matter = "0.1.0"
